refactor: slight example chnages