@@ -6,9 +6,7 @@ import com.openai.models.ChatModel;
 import com.openai.models.responses.ResponseCreateParams;
 import com.openai.models.responses.ResponseInputFile;
 import com.openai.models.responses.ResponseInputItem;
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.Base64;
 import java.util.List;
 
@@ -17,26 +15,25 @@ public final class ResponsesInputFileExample {
     private ResponsesInputFileExample() {}
 
     public static void main(String[] args) throws IOException {
-        // Configures using the `OPENAI_API_KEY`, `OPENAI_ORG_ID` and `OPENAI_PROJECT_ID` environment variables
+        // Configures using one of:
+        // - The `OPENAI_API_KEY` environment variable
+        // - The `OPENAI_BASE_URL` and `AZURE_OPENAI_KEY` environment variables
         OpenAIClient client = OpenAIOkHttpClient.fromEnv();
 
-        // Read file content and construct data URI String
-        File file = new File("openai-java-example/src/main/resources/pdflatex-image.pdf");
-        byte[] fileContent = Files.readAllBytes(file.toPath());
-        String base64String = Base64.getEncoder().encodeToString(fileContent);
-        String dataUri = "data:application/pdf;base64," + base64String;
+        ClassLoader classloader = Thread.currentThread().getContextClassLoader();
+        String filename = "pdflatex-image.pdf";
+        byte[] pdfBytes = classloader.getResource(filename).openStream().readAllBytes();
+        String pdfBase64Url = "data:application/pdf;base64," + Base64.getEncoder().encodeToString(pdfBytes);
 
         ResponseInputFile inputFile = ResponseInputFile.builder()
-                .filename(file.getName())
-                .fileData(dataUri)
+                .filename(filename)
+                .fileData(pdfBase64Url)
                 .build();
-
         ResponseInputItem messageInputItem = ResponseInputItem.ofMessage(ResponseInputItem.Message.builder()
                 .role(ResponseInputItem.Message.Role.USER)
                 .addInputTextContent("Describe this file.")
                 .addContent(inputFile)
                 .build());
-
         ResponseCreateParams createParams = ResponseCreateParams.builder()
                 .inputOfResponse(List.of(messageInputItem))
                 .model(ChatModel.GPT_4O)
